[package]
name = "nucleus"
version = "0.1.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>", "Amit Aryeh Levy <amit@amitlevy.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = { version = "0.2", default-features = false }
rlibc = "0.1.4"
vga = { path = "vga" }
keyboard = { path = "keyboard" }
