[package]
name = "turbo_fish"
version = "0.0.2"
authors = ["Vincent Combey <vcombey@student.42.fr>", "Mickael Billod <bmickael@student.42.fr>", "Sebastien Clolus <sclolus@student.42.fr>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
panic = "abort"

[profile.dev]
panic = "abort"
debug = true

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "0.9.0"
bitflags = "1.0.4"
log = "0.4.6"
lock_api = "0.1.5"
hashmap_core = "0.1.10"
io = { path = "dependencies/io" }
keyboard = { path = "dependencies/keyboard" }
mbr = { path = "dependencies/mbr" }
raw_data = { path = "dependencies/raw_data" }
const_assert = { path = "dependencies/const_assert" }
ext2 = { path = "dependencies/ext2" }
terminal = { path = "dependencies/terminal" }
registers = { path = "dependencies/registers" }
spinlock = { path = "dependencies/spinlock" }
elf_loader = { path = "dependencies/elf_loader" }
errno = { path = "dependencies/errno" }
try_clone_derive = { path = "dependencies/try_clone_derive" }
fallible_collections = { path = "dependencies/fallible_collections" }

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[features]
exit-on-panic = ["terminal/exit-on-panic"]
serial-eprintln = ["terminal/serial-eprintln"]
std-print = ["terminal/std-print", "ext2/std-print", "elf_loader/std-print"]
#test-succeed= []
#test-failed= []
test-sodo-allocator= []
test-vmalloc= []
test-kmalloc= []
native-test-hard-drive-read-pio = []
native-test-hard-drive-write-pio = []
native-test-hard-drive-read-bios = []
native-test-hard-drive-write-bios = []
test = []

[workspace]
members = [
"dependencies/io",
"dependencies/mbr",
"dependencies/raw_data",
"dependencies/const_assert",
"dependencies/ext2",
"dependencies/terminal",
"dependencies/registers",
"dependencies/spinlock",
"dependencies/elf_loader",
"dependencies/errno",
"dependencies/try_clone_derive",
"dependencies/fallible_collections"
]
exclude = ["autobuild/nm_map_gen_rust", "integration_tester"]
