[package]
name = "rtc"
version = "0.1.0"
authors = ["mordak <bmickael@student.42.fr>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
panic = "abort"

[profile.dev]
panic = "abort"
debug = true

[lib]
crate-type = ["staticlib"]

[dependencies]
kernel_modules = { path = "dependencies/kernel_modules" }

[workspace]
members = [
	"dependencies/kernel_modules",
]