[package]
name = "ext2"
version = "0.1.0"
authors = ["vcombey <vcombey@student.42.fr>"]
edition = "2018"

[dependencies]
bitflags = "1.0.4"
bit_field = "0.9.0"

[target.'cfg(not(test))'.dependencies]
terminal = { path = "../terminal" }

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
rand = "0.6.5"

[features]
test = []
std-print = []