[package]
name = "messaging"
version = "0.1.0"
authors = ["vcombey <vcombey@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard = { path = "../keyboard" }
libc_binding = { path = "../libc_binding" }
