[package]
name = "terminal"
version = "0.1.0"
authors = ["vcombey <vcombey@student.42.fr>"]
edition = "2018"

[dependencies]
raw_data = { path = "../raw_data" }
keyboard = { path = "../keyboard" }
sync = { path = "../sync" }
i386 = { path = "../i386" }
io = { path = "../io" }
bitflags = "1.0.4"
log = "0.4.6"
messaging = { path = "../messaging" }
libc_binding = { path = "../libc_binding" }
ansi_escape_code = { path = "../ansi_escape_code" }

[dependencies.arrayvec]
version = "0.4.11"
default_features = false

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[features]
exit-on-panic = []
serial-eprintln = []
std-print = []