[package]
name = "terminal"
version = "0.1.0"
authors = ["vcombey <vcombey@student.42.fr>"]
edition = "2018"

[dependencies]
keyboard = { path = "../keyboard" }
io = { path = "../io" }
bitflags = "1.0.4"
log = "0.4.6"
messaging = { path = "../messaging" }
libc_binding = { path = "../libc_binding" }
ansi_escape_code = { path = "../ansi_escape_code" }
screen = { path = "../screen" }

[dependencies.arrayvec]
version = "0.4.11"
default_features = false

[features]
exit-on-panic = []
serial-eprintln = []
std-print = []